@@ -1,109 +1,105 @@
 package com.sprint.mission.discodeit.repository.file;
 
-import com.sprint.mission.discodeit.entity.Channel;
-import com.sprint.mission.discodeit.entity.ChannelType;
-import com.sprint.mission.discodeit.repository.ChannelRepository;
 
-import java.io.BufferedReader;
-import java.io.BufferedWriter;
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
+import com.sprint.mission.discodeit.entity.Channel;
+import com.sprint.mission.discodeit.repository.ChannelRepository;
+import org.springframework.stereotype.Repository;
+
+import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.StandardOpenOption;
-import java.util.ArrayList;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
+@Repository // File*Repository 구현체를 Repository 인터페이스의 Bean으로 등록
 public class FileChannelRepository implements ChannelRepository {
 
+    private final Path DIRECTORY;
+    private final String EXTENSION=".ser";
 
-    private final Path channelPath =Path.of("data/channels.csv");
-
-    private Channel parseCsvRow(String line) throws IOException {
-        String[] cols=line.split(",", -1);
-        if (cols.length<4){
-            throw new IOException("CSV 칼럼 수가 부족합니다! (4개 필요, 실제 "+cols.length+"개)");
-
+    public FileChannelRepository(){
+        this.DIRECTORY= Paths.get(System.getProperty("user.dir"),
+                "file-data-map", Channel.class.getSimpleName());
+        if (Files.notExists(DIRECTORY)){
+            try {
+                Files.createDirectories(DIRECTORY);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
         }
-        UUID id=UUID.fromString(cols[0]);
-        ChannelType type= ChannelType.valueOf(cols[1]);
-        String name=cols[2];
-        Long createdAt=Long.parseLong(cols[3]);
+    }
 
-        return new Channel(id, type, name, createdAt);
-
+    private Path resolvePath(UUID id){
+        return DIRECTORY.resolve(id+EXTENSION);
     }
 
     @Override
-    public Channel createOne(Channel channel) throws IOException {
+    public Channel save(Channel channel) {
+        Path path=resolvePath(channel.getId()); // 경로 포함한 파일명은 파일을 읽는 부분에서 처리
+        try (
+                FileOutputStream fileOutputStream=new FileOutputStream(path.toFile());
+                ObjectOutputStream objectOutputStream=new ObjectOutputStream(fileOutputStream)
+        ){
+            objectOutputStream.writeObject(channel);
 
-        Path parent=channelPath.getParent(); // 경로 실제로 존재하는지 확인하기 위해 부모 경로 확인
-
-        if(parent!=null){ // null 체크 먼저 진행하자
-            Files.createDirectories(parent);
-        }
-
-        try (BufferedWriter writer= Files.newBufferedWriter(channelPath, StandardCharsets.UTF_8, StandardOpenOption.APPEND, StandardOpenOption.CREATE)){
-            writer.write(channel.getId()+","+channel.getType()+","+channel.getName()+","+channel.getCreatedAt()+","+channel.getUpdatedAt());
-            writer.newLine();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
         return channel;
     }
 
     @Override
-    public Optional<Channel> readOne(UUID id) throws IOException {
-        try (BufferedReader reader=Files.newBufferedReader(channelPath, StandardCharsets.UTF_8)){
-            String line;
-            while ((line=reader.readLine())!=null){
-                if (line.isBlank()) continue;
-                Channel channel=parseCsvRow(line);
-                if (channel.getId().equals(id)){
-                    return Optional.of(channel);
-                }
+    public Optional<Channel> findById(UUID id) {
+        Channel channelNullable=null;
+        Path path=resolvePath(id);
+        if (Files.exists(path)){
+            try (
+                    FileInputStream fileInputStream=new FileInputStream(path.toFile());
+                    ObjectInputStream objectInputStream=new ObjectInputStream(fileInputStream)
+            ){
+                channelNullable=(Channel) objectInputStream.readObject();
+            } catch (IOException | ClassNotFoundException e) {
+                throw new RuntimeException(e);
             }
         }
-        return Optional.empty();
+        return Optional.ofNullable(channelNullable);
     }
 
     @Override
-    public List<Channel> readAll() throws IOException {
-        List<Channel> allResult =new ArrayList<>();
-        try(BufferedReader reader=Files.newBufferedReader(channelPath, StandardCharsets.UTF_8)) {
-
-            String line;
-            while ((line=reader.readLine())!=null) {
-                if (line.isBlank()) continue;
-                allResult.add(parseCsvRow(line));
-            }
+    public List<Channel> findAll() {
+        try {
+            return Files.list(DIRECTORY)
+                    .filter(path -> path.toString().endsWith(EXTENSION))
+                    .map(path -> {
+                        try (
+                                FileInputStream fileInputStream=new FileInputStream(path.toFile());
+                                ObjectInputStream objectInputStream=new ObjectInputStream(fileInputStream)
+                        ){
+                            return (Channel)objectInputStream.readObject();
+                        } catch (IOException | ClassNotFoundException e) {
+                            throw new RuntimeException(e);
+                        }
+                    }).toList();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
-        return allResult;
     }
 
     @Override
-    public void deleteOne(UUID id) throws IOException {
-
-        List<Channel> erase=new ArrayList<>();
-        try (BufferedReader reader=Files.newBufferedReader(channelPath, StandardCharsets.UTF_8)){
-
-            String line;
-            while ((line=reader.readLine())!=null) {
-                if (line.isBlank()) continue;
-                Channel channel=parseCsvRow(line);
-                if (!channel.getId().equals(id)) {
-                    erase.add(channel);
-
-                }
-            }
-
+    public void deleteById(UUID id) {
+        Path path=resolvePath(id);
+        try {
+            Files.delete(path);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
+    }
 
-        try (BufferedWriter writer=Files.newBufferedWriter(channelPath, StandardCharsets.UTF_8)){
-            for (Channel channel : erase) {
-                writer.write(channel.getId()+","+channel.getType()+","+channel.getName()+","+channel.getUpdatedAt());
-                writer.newLine();
-            }
-        }
+    @Override
+    public boolean existById(UUID id) {
+        Path path=resolvePath(id);
+        return Files.exists(path);
     }
 }
